# ndk-prefab-example

./: .gitmodules  README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/nl/littlerobots/example/: MainActivity.kt
app/src/main/res/values/: themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
java-llama-android/: CMakeLists.txt  build.gradle.kts
llamacpp-android/: CMakeLists.txt  build.gradle.kts
